<resources>
    <string name="app_name">TaskPilot</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="task_name">Task Name</string>
    <string name="deadline">Deadline</string>
    <string name="priority">Priority</string>
    <string name="task_description">Task Description</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="edit_task">Edit Task</string>
    <string name="cancel">Cancel</string>
    <string name="create_task">Create Task</string>
    <string name="tasks">Tasks</string>
    <string name="today">Today Tasks</string>
</resources>