<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTaskName"
        android:layout_width="372dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/task_name"
        android:fontFamily="@font/poppins"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDeadline"
        android:layout_width="187dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/deadline"
        android:fontFamily="@font/poppins"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTaskName" />

    <TextView
        android:id="@+id/txtPriority"
        android:layout_width="190dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/priority"
        android:fontFamily="@font/poppins"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDeadline" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="332dp"
        android:layout_height="372dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="143dp"
        android:text="@string/task_description"
        android:fontFamily="@font/poppins"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="45dp"
        android:text="@string/update"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@color/colorPrimary"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="44dp"
        android:text="@string/delete"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/colorPrimary"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="45dp"
        android:text="@string/back"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>